@@ -23,6 +23,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2010-09-12 [B] Fixed display of unprocessed bbcode markup in ecard display {Nibbler}
 2010-09-10 [O] Optimized picture resizing and watermarking procedure {eenemeenemuu}
 2010-09-10 [B] Fixed exif issue when auto resizing is enabled and watermarking is disabled (thread ID 66994) {eenemeenemuu}
 2010-09-10 [A] Show 'upload needs admin approval' message for flash uploader (thread ID 66832) {eenemeenemuu}
